      append some reasoned response to one already posted ;)

  * Pruned more inapplicable files from the raw cvs source,
    cleaned configure.in and removed the need for a common setup.h,
    removed superfluous library links and generally tweaked things
    so as to make adding new ports easier.
  * added --gl-libs flag to wx-config.

 -- Ron Lee <ron@debian.org>  Thu, 30 Aug 2001 15:41:49 -0700

wxwindows2.2 (2.2.7) unstable; urgency=medium

  * The "Testing Tarantella" release.
  * various small control (mis)behaviours corrected.
  * added missing build-dep for gettext.
  * updated wxPython description, Closes: #102689
  * Never publicly released, oh well.

 -- Ron Lee <ron@debian.org>  Sun, 10 Jun 2001 19:32:46 -0700

wxwindows2.2 (2.2.6.1) unstable; urgency=low

  * fix rules so it really doesn't build -indep for ports
    and fixed ambiguous overload bug in mmedia contrib.
    This time it will build on alpha for sure.  Really. :)
    Closes: #92288
  * added extra -dev package deps.  Closes: #91364

 -- Ron Lee <ron@debian.org>  Sat,  7 Apr 2001 06:49:58 -0700

wxwindows2.2 (2.2.6) unstable; urgency=low

  * changed i18n package back to building during arch phase
    so we can reap the .mo files as they are created. Closes: #86174
  * OBCBLR Closes: #84692
  * fix wxPython build gremlin.  Closes: #89209, #85129
  * tweaked wx-config alternatives priority to favour the most
    likely default use.
  * general buglet count reduced.

 -- Ron Lee <ron@debian.org>  Thu,  8 Mar 2001 21:10:07 -0800

wxwindows2.2 (2.2.5.1) unstable; urgency=low

  * "This One's for Dirk"  Closes: #84696
  * 2.2.5 has known issues and will not be released for Debian.
  * Fixed parser.y for Alpha builds (#82949)
  * changed mesa dependency to the virtual libgl package and
    added Conflicts for the old 2.1 packages (which are now
    gone from woody anyway)  Closes: #80120, #70778, #70779, #70780
  * wxPython now builds as a single unit (including contrib)