@@ -478,7 +478,7 @@ WX_VERSION=$WX_MAJOR_VERSION_NUMBER.$WX_MINOR_VERSION_NUMBER.$WX_RELEASE_NUMBER
 WX_RELEASE=$WX_MAJOR_VERSION_NUMBER.$WX_MINOR_VERSION_NUMBER
 
 WX_CURRENT=6
-WX_REVISION=1
+WX_REVISION=2
 WX_AGE=6
 
 dnl ------------------------------------------------------------------------
